doc: fix color contrast for anchor marks in dark mode
Currently, in its dark mode, our website background color is #090C15 and
our anchor marks are #707070 for a contrast ratio of 3.94 to 1, falling
short of the WCAG AA 4.5 to 1. This changes the mark color in dark mode
only to #7A7A7A for a color contrast of 4.55 to 1.

PR-URL: https://github.com/nodejs/node/pull/39168

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -32,6 +32,7 @@
   --color-fill-app: var(--white);
   --color-fill-side-nav: var(--gray6);
   --color-links: var(--green1);
+  --color-text-mark: var(--gray1);
   --color-text-nav: var(--gray3);
   --color-text-primary: var(--gray6);
   --color-text-secondary: var(--green2);
@@ -42,6 +43,7 @@
   --color-fill-app: var(--black1);
   --color-fill-side-nav: var(--black3);
   --color-links: var(--green5);
+  --color-text-mark: var(--gray5);
   --color-text-primary: var(--white);
 }
 
@@ -632,7 +634,7 @@ a code {
 
 span > .mark,
 span > .mark:visited {
-  color: #707070;
+  color: var(--color-text-mark);
   position: absolute;
   top: 0;
   right: 0;
